--- a/app/src/main/res/layout/currency_add_fragment.xml
+++ b/app/src/main/res/layout/currency_add_fragment.xml
@@ -56,5 +56,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/currency_rate_label" />
 
+        <Button
+            android:id="@+id/delete_action"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/delete_action"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/save_action" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
